--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "@flarenetwork/flare-periphery-contract-artifacts": "^0.1.40",
+    "@openzeppelin/contracts": "^5.4.0",
     "adm-zip": "^0.4.16",
     "ansi-colors": "^4.1.3",
     "ansi-regex": "^5.0.1",
