--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "@types/node": "^20.10.0",
     "chai": "^4.3.7",
     "dotenv": "^17.2.4",
-    "ethers": "^6.8.1",
-    "hardhat": "^2.19.1",
+    "ethers": "^6.16.0",
+    "hardhat": "^2.28.4",
     "hardhat-gas-reporter": "^1.0.10",
     "solidity-coverage": "^0.8.17",
     "ts-node": "^10.9.1",
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "@flarenetwork/flare-periphery-contract-artifacts": "^0.1.40",
+    "@openzeppelin/contracts": "^5.4.0",
     "adm-zip": "^0.4.16",
     "ansi-colors": "^4.1.3",
     "ansi-regex": "^5.0.1",
