--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@types/node": "^20.10.0",
     "chai": "^4.3.7",
     "dotenv": "^17.2.4",
-    "ethers": "^6.8.1",
+    "ethers": "^6.16.0",
     "hardhat": "^2.19.1",
     "hardhat-gas-reporter": "^1.0.10",
     "solidity-coverage": "^0.8.17",
@@ -40,6 +40,7 @@
     "ansi-colors": "^4.1.3",
     "ansi-regex": "^5.0.1",
     "assertion-error": "^2.0.1",
+    "buffer": "^6.0.3",
     "chai-as-promised": "^7.1.2",
     "chalk": "^5.6.2",
     "check-error": "^1.0.3",
