--- a/app/package.json
+++ b/app/package.json
@@ -14,15 +14,16 @@
     "@privy-io/wagmi": "^4.0.1",
     "@supabase/supabase-js": "^2.95.3",
     "@tanstack/react-query": "^5.90.20",
-    "react": "^19.2.4",
-    "react-dom": "^19.2.4",
-    "react-router-dom": "^7.13.0",
+    "antd": "^5.14.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-feather": "^2.0.10",
+    "react-router-dom": "^6.22.3",
     "viem": "^2.45.1",
     "wagmi": "^3.4.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
-    "@nomicfoundation/hardhat-toolbox": "^6.1.0",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
@@ -30,7 +31,6 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
-    "hardhat": "^3.1.7",
     "vite": "^7.2.4"
   },
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
