--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "hardhat test",
+    "compile": "hardhat compile",
+    "lint": "solhint 'contracts/**/*.sol'",
+    "format": "prettier --write 'contracts/**/*.sol' 'tests/**/*.ts' 'scripts/**/*.ts'",
+    "deploy:coston2": "hardhat run scripts/deploy.ts --network coston2",
+    "deploy:plasma": "hardhat run scripts/deploy.ts --network plasma",
+    "verify:coston2": "hardhat verify --network coston2",
+    "verify:plasma": "hardhat verify --network plasma"
   },
   "keywords": [],
   "author": "",
@@ -35,6 +42,7 @@
     "typescript": "^5.3.2"
   },
   "dependencies": {
+    "@excalidraw/excalidraw": "^0.18.0",
     "@flarenetwork/flare-periphery-contract-artifacts": "^0.1.40",
     "@openzeppelin/contracts": "^5.4.0",
     "adm-zip": "^0.4.16",
@@ -61,6 +69,8 @@
     "ms": "^2.1.3",
     "ordinal": "^1.0.3",
     "p-map": "^7.0.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "readdirp": "^4.1.2",
     "resolve-pkg-maps": "^1.0.0",
     "resolve.exports": "^2.0.3",
